# Project-Litt

./: .env.example  .gitignore  .gitmodules  SPEC.md  requirements_stage1.txt  requirements_stage2.txt
client/: README.md  package-lock.json
client/src/app/: globals.css  layout.tsx  page.tsx
ingestion/: stage1_fetch.py  stage2_process.py
ingestion/db/: create_collections.py
ingestion/fetchers/: courtlistener.py  hf_streaming.py  statutes.py
ingestion/parsers/: opinion_parser.py  statute_parser.py
ingestion/taggers/: groq_tagger.py
ingestion/utils/: practice_area.py  rate_limiter.py  state.py
scripts/: .env.example  README.md  actian_loader.py  qa_benchmark.jsonl  requirements.txt  run_ingestion.py  run_qa_benchmark.py
scripts/ingest/: __init__.py  config.py  courtlistener.py  exporters.py  models.py  pile_of_law.py  quality.py  utils.py
scripts/output/manifests/: ingestion_manifest_20260416T030110Z.json
scripts/output/processed/: courtlistener_20260416T030110Z_accepted.csv  pile_of_law_20260416T030110Z_accepted.csv
scripts/output/raw/courtlistener/: courtlistener_rest_20260416T030110Z_p001.json
scripts/output/raw/pile_of_law/: pile_of_law_sample_20260416T030111Z.json
server/: app.py  pyproject.toml  search.py
server/tests/: test_search_pipeline.py
server/utils/: __init__.py
