[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "actian-vectorai",
    "fastapi>=0.135.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]

[tool.uv.sources]
actian-vectorai = { path = "../actian-db/actian_vectorai-0.1.0b2-py3-none-any.whl" }
